# elaborato-so

./: README.md  meson.build
.github/workflows/: ubuntu.yml
subprojects/client/: meson.build
subprojects/client/include/: msgq_utils.h  parse_args.h  sem_utils.h  shm_utils.h
subprojects/client/src/: main.c  msgq_utils.c  parse_args.c  sem_utils.c  shm_utils.c
subprojects/client/test/: parse_args.c
subprojects/libconnect4/: meson.build
subprojects/libconnect4/include/: libconnect4.h
subprojects/libconnect4/src/: lib.c  sem_utils.c
subprojects/libconnect4/test/: parse_uint.c  sem_getnum.c
subprojects/server/: meson.build
subprojects/server/include/: msgq_utils.h  parse_args.h  sem_utils.h  shm_utils.h  sigint_utils.h
subprojects/server/src/: main.c  msgq_utils.c  parse_args.c  sem_utils.c  shm_utils.c  sigint_utils.c
subprojects/server/test/: check_diagonal.c  check_horizontal.c  check_vertical.c  parse_args.c
tools/: pre-dist.sh
